gatewayapi-nginx-fabric/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-default-to-nginx-gateway
  namespace: default # This is the "to" namespace
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: nginx-gateway # This is where routes are
  to:
    - group: ""
      kind: Service
