gatewayapi-nginx-fabric/HTTP-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: my-gateway
  sectionName: http # Attach to the HTTP listener
  rules:
    - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301 # permanent redirect
